refactor launches and other minor fix-ups